force-app/main/default/objects/FSL__Scheduling_Policy__c/fields/FSL__Commit_Mode__c.field-meta.xml
<CustomField>
    <fullName>FSL__Commit_Mode__c</fullName>
    <label>Commit Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AlwaysCommit</fullName>
            </value>
            <value>
                <fullName>Rollback</fullName>
                <default>true</default>
                <label>Rollback</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>