force-app/main/default/objects/FSL__Scheduling_Policy__c/fields/FSL__Daily_Optimization__c.field-meta.xml
<CustomField>
    <fullName>FSL__Daily_Optimization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In-Day Optimization</label>
    <type>Checkbox</type>
</CustomField>