force-app/main/default/objects/FSL__Scheduling_Policy__c/fields/FSL__Travel_Mode__c.field-meta.xml
<CustomField>
    <fullName>FSL__Travel_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Mode (Closed Pilot)</label>
    <type>Checkbox</type>
</CustomField>