force-app/main/default/objects/FSL__Scheduling_Policy__c/fields/FSM_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>