force-app/main/default/objects/FSL__Scheduling_Policy__c/listViews/FSL__All.listView-meta.xml
<ListView>
    <fullName>FSL__All</fullName>
    <columns>FSM_BusinessUnit__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>FSL__Fix_Overlaps__c</columns>
    <columns>FSL__Daily_Optimization__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>